--- a/meu-projeto/index.html
+++ b/meu-projeto/index.html
@@ -10,6 +10,9 @@
   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda libero omnis qui, earum facilis recusandae laudantium magnam quae corrupti sint modi ex vol
   
  <video src="https://www.cursoemvideo.com/curso/curso-de-git-e-github/aulas/aulas-de-git-e-github/modulos/instalacoes-e-configuracoes-importantes-curso-de-git-e-github/ "></video>
+
+
+ <a href="https://www.cursoemvideo.com/curso/curso-de-git-e-github/aulas/aulas-de-git-e-github/modulos/instalacoes-e-configuracoes-importantes-curso-de-git-e-github/ " target="_blank"  video guanabara  rel="noopener noreferrer"></a>
  
 </body>
 </html>
