--- a/meu-projeto/index.html
+++ b/meu-projeto/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda libero omnis qui, earum facilis recusandae laudantium magnam quae corrupti sint modi ex vol
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere eaque, ut necessitatibus maxime molestiae ex natus eligendi! Illo, tempora, esse vitae nesciunt doloribus magnam nihil odit temporibus sit voluptatum molestiae?
   
  <video src="https://www.cursoemvideo.com/curso/curso-de-git-e-github/aulas/aulas-de-git-e-github/modulos/instalacoes-e-configuracoes-importantes-curso-de-git-e-github/ "></video>
 
