--- a/meu-projeto/index.html
+++ b/meu-projeto/index.html
@@ -12,7 +12,7 @@
  <video src="https://www.cursoemvideo.com/curso/curso-de-git-e-github/aulas/aulas-de-git-e-github/modulos/instalacoes-e-configuracoes-importantes-curso-de-git-e-github/ "></video>
 
 
- <a href="https://www.cursoemvideo.com/curso/curso-de-git-e-github/aulas/aulas-de-git-e-github/modulos/instalacoes-e-configuracoes-importantes-curso-de-git-e-github/ " target="_blank"  video guanabara  rel="noopener noreferrer"></a>
- 
+ <a href="https://www.cursoemvideo.com/curso/curso-de-git-e-github/aulas/aulas-de-git-e-github/modulos/instalacoes-e-configuracoes-importantes-curso-de-git-e-github/ " target="_blank"   rel="noopener noreferrer"> video
+ </a>
 </body>
 </html>
