--- a/meu-projeto/index.html
+++ b/meu-projeto/index.html
@@ -4,16 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  
   <title>Ola, mundo!</title>
 </head>
 <body>
   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda libero omnis qui, earum facilis recusandae laudantium magnam quae corrupti sint modi ex vol
   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere eaque, ut necessitatibus maxime molestiae ex natus eligendi! Illo, tempora, esse vitae nesciunt doloribus magnam nihil odit temporibus sit voluptatum molestiae?
   
- <video src="https://www.cursoemvideo.com/curso/curso-de-git-e-github/aulas/aulas-de-git-e-github/modulos/instalacoes-e-configuracoes-importantes-curso-de-git-e-github/ "></video>
+ <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf">github</a>
 
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptates temporibus expedita facere laborum repellat mollitia ullam soluta vitae ea vel dolorum eos est totam recusandae ipsum, quam quae aliquam.
 
- <a href="https://www.cursoemvideo.com/curso/curso-de-git-e-github/aulas/aulas-de-git-e-github/modulos/instalacoes-e-configuracoes-importantes-curso-de-git-e-github/ " target="_blank"   rel="noopener noreferrer"> video
+ <a href="https://www.cursoemvideo.com/curso/curso-de-git-e-github/aulas/aulas-de-git-e-github/modulos/instalacoes-e-configuracoes-importantes-curso-de-git-e-github/ " target="_blank"   rel="noopener noreferrer"> video45
  </a>
+
+ <li>
+  <a href="pdf/livro-comp.zip" type="application/zip">arquivo zipado</a>
+ </li>
+
+ <li><a href="pdf/lista-em-pdf.pdf" type="application/pdf" download="lista-em-pdf">arquivo em pdf</a></li>
 </body>
 </html>
